<resources>
    <string name="app_name">Weather App</string>
    <string name="temp_name">Temperature</string>
    <string name="feel_name">Feel</string>
    <string name="humid_name">Humidity</string>
    <string name="press_name">Pressure</string>
    <string name="low_name">Low</string>
    <string name="high_name">High</string>
    <string name="loc_name">Enter a Location</string>
    <string name="btn_name">Search</string>
    <string name="back_name">Back</string>
    <string name="wind_name">Wind Speed</string>
    <string name="lat_name">Latitude</string>
    <string name="lon_name">Longitude</string>
    <string name="mapBtn_name">Show Map</string>
    <string name="instr_name">Search for a location or click the map icon to use your current position.</string>
    <string name="start_name">Start</string>
    <string name="title_activity_maps">Map</string>
    <string name="author_name">Alena Krause Z23445379</string>
</resources>
