<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBF2CA"
    tools:context=".SearchActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/userInput"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/loc_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="386dp"
        android:layout_height="37dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/instr_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInput" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="83dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="#AAC360"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="doSearch"
        android:text="@string/btn_name"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions" />

    <Button
        android:id="@+id/currLoc"
        android:layout_width="47dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@android:drawable/ic_menu_mapmode"
        android:onClick="getCurrLoc"
        app:layout_constraintBaseline_toBaselineOf="@+id/userInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userInput" />

    <TextView
        android:id="@+id/nameZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/author_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="274dp"
        android:layout_height="256dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart"
        app:srcCompat="@drawable/clouds" />

</androidx.constraintlayout.widget.ConstraintLayout>